# atlant-api

./: .gitignore  README.md
curl/: README.md  atlant_api_key.yaml  atlant_basic.yaml  atlant_tls.yaml  authorization_openapi.json  management_openapi.json  scanning_openapi.json
go/: README.md
go/scanner/: go.mod  main.go
java/: README.md
java/scanner/: build.gradle
java/scanner/src/main/com/fsecure/atlant/examples/scanner/: APIException.java  AtlantScannerRunner.java  Authenticator.java  (+14 more)
javascript/: README.md
javascript/scanner/: package-lock.json  package.json  scanner.js
python/: README.md  icaptest.py  setup.py
python/asyncio-icap-client/: MANIFEST.in  README.md  pyproject.toml
python/asyncio-icap-client/asyncio_icap_client/: __init__.py  _constants.py  _decoder.py  _encoder.py  _sections.py  async_readable.py  client.py  connection.py  errors.py  request.py  response.py
python/atlant/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/atlant/api/: __init__.py  auth.py  common.py  config.py  icap.py  scan.py
python/atlant/atlant/: __init__.py  auth.py  common.py  config.py  scan.py
python/atlant/atlant/cli/: classify_url.py  config.py  config_file.py  get_access_token.py  main.py  scan_dir.py  scan_file.py
python/atlant/tools/: dirscan.py  get.py  icap.py  scan.py  set.py  token.py  web.py
python/atlant/tools/static/: app.js  display.css
python/authentication/: token.py
python/configuration/: common.py  get.py  set.py
python/demo-web-app/: README.md  compose.yml
python/demo-web-app/demo-web-app-atlant/: Dockerfile  config.json
python/demo-web-app/demo-web-app-backend/: .gitignore  Dockerfile  pyproject.toml
python/demo-web-app/demo-web-app-backend/demo_web_app_backend/: app.py
python/demo-web-app/demo-web-app-frontend/: .prettierignore  Dockerfile  build.mjs  package-lock.json  package.json
python/demo-web-app/demo-web-app-frontend/docker/: default.conf
python/demo-web-app/demo-web-app-frontend/src/: App.jsx  Common.js  ScanFileForm.jsx  ScanForm.jsx  ScanHashForm.jsx  ScanResults.jsx  ScanURLForm.jsx
python/demo-web-app/demo-web-app-frontend/www/: index.html
python/icap/: icap.py
python/scanning/: scan.py
python/web/: web.py
python/web/static/: index.html
