[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncio-icap-client"
version = "0.1.0"
authors = [ { name = "WithSecure", email = "noreply@withsecure.com" } ]
license = { file = "LICENSE" }
description = "Asynchronous ICAP client library."
requires-python = ">=3.8"
keywords = [ "icap", "client", "rfc3507", "networking" ]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
  "Typing :: Typed",
]

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
